rustdocs/errors/rust-bitcoin-chacha20_poly1305-src-chacha20.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/chacha20_poly1305/src/chacha20.rs:5:5
  |
5 | use core::ops::BitXor;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
